--- a/src/_includes/home/work.html
+++ b/src/_includes/home/work.html
@@ -10,7 +10,7 @@
         <a href="https://robinpowered.com/features/room-display" target="_blank">View Project</a>
       </div>
       <div class="preview">
-        <img src="/dist/images/projects/robin/rooms.jpg" />
+        <img src="/dist/images/projects/robin/rooms.jpg" alt="Robin Rooms tablet" />
       </div>
     </div>
     <div class="portfolio-row">
@@ -23,7 +23,7 @@
         <a href="https://robinpowered.com" target="_blank">View Project</a>
       </div>
       <div class="preview">
-        {% include web-preview.html image="/dist/images/projects/robin/dashboard.jpg" %}
+        {% include web-preview.html image="/dist/images/projects/robin/dashboard.jpg" alt="Robin Dashboard" %}
       </div>
     </div>
     <div class="portfolio-row alt">
@@ -35,11 +35,11 @@
         </p>
       </div>
       <div class="preview">
-        {% include web-preview.html image="/dist/images/projects/tweetdrive/tweetdrive1.jpg" %}
+        {% include web-preview.html image="/dist/images/projects/tweetdrive/tweetdrive1.jpg" alt="TweetDrive" %}
       </div>
     </div>
     <div class="more-items">
-      <a href="#" class="view-more-portfolio">See more projects</a>
+      <a href="#view-more-portfolio" id="view-more-portfolio">See more projects</a>
     </div>
   </div>
 </div>
