--- a/src/_includes/web-preview.html
+++ b/src/_includes/web-preview.html
@@ -4,6 +4,6 @@
     <span></span>
   </div>
   <div class="body">
-    <img src="{{ include.image }}" />
+    <img src="{{ include.image }}" alt={{ include.alt }} />
   </div>
 </div>
