--- a/src/_layouts/archive.html
+++ b/src/_layouts/archive.html
@@ -4,6 +4,7 @@ layout: default
 <div class="blog archive container">
   <div class="row">
     <div class="post-list">
+      <h1>My latest thoughts</h1>
       {{ content }}
     </div>
     <aside class="post-sidebar">
