open source cross links

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -455,6 +455,10 @@ body.page-index {
         line-height: 22px;
         margin-bottom: 0;
       }
+      a {
+        margin-top: 15px;
+        display: block;
+      }
       img {
         display: block;
         margin: auto;
