--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -4,8 +4,11 @@
       <div class="item">
         <div class="preview">
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/arduino-board.jpg" alt="example" />
-          <h3>Arduino Hue Light radar</h3>
+          <h3>Arduino Hue Light Radar</h3>
           <p>Lights that turn on when you enter the room</p>
+          <a href="https://github.com/ajwhite/arduino-huelight-radar"
+            target="_blank"
+            title="Arduino Hue Light Radar">View project</a>
         </div>
       </div>
       <div class="item">
@@ -13,6 +16,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/blog/react-native-smart-mirror-lab/preview.jpg" alt="example" />
           <h3>Digital smart mirror</h3>
           <p>A smart mirror for your home</p>
+          <a href="https://atticuswhite.com/blog/react-native-smart-mirror-lab/"
+            target="_blank"
+            title="Digital Smart Mirror lab with React Native">View project</a>
         </div>
       </div>
       <div class="item">
@@ -20,6 +26,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/react-native-redux-calculator.png" alt="React Native + Redux Calculator" />
           <h3>React Native + Redux Calculator</h3>
           <p>A history-tracking calculator built with React Native and Redux predictable state containers</p>
+          <a href="https://github.com/ajwhite/ReactNative-Redux-Calculator"
+            target="_blank"
+            title="React Native + Redux Calculator">View project</a>
         </div>
       </div>
       <div class="item">
@@ -27,6 +36,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/fluid-labels.png" alt="example" />
           <h3>Fluid labels</h3>
           <p>Placeholder text that slides in as an overlay when the user beings typing</p>
+          <a href="https://github.com/ajwhite/fluid-labels"
+            target="_blank"
+            title="jQuery Fluid Labels plugin">View project</a>
         </div>
       </div>
       <div class="item">
@@ -34,6 +46,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/gulp.png" alt="example" />
           <h3>gulp-ng-config</h3>
           <p>A gulp plugin for generating Angular constants based on environment configurations</p>
+          <a href="https://atticuswhite.com/blog/angularjs-configuration-with-gulpjs/"
+            target="_blank"
+            title="Gulp plugin for AngularJS constants for environment variables">View project</a>
         </div>
       </div>
       <div class="item">
@@ -41,6 +56,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/chromecast.png" alt="example" />
           <h3>titanium-chromecast</h3>
           <p>A native titanium module for integrating Titanium Appcelerator and Chromecast</p>
+          <a href="https://github.com/ajwhite/titanium-chromecast/"
+            target="_blank"
+            title="Titanium Appcelerator module for Google Chromecast SDK">View project</a>
         </div>
       </div>
       <div class="item">
@@ -48,6 +66,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/jquery-stockquotes.png" alt="example" />
           <h3>jQuery Stock Quotes</h3>
           <p>A jQuery plugin to display stock quotes for symbols.</p>
+          <a href="https://atticuswhite.com/blog/jquery-stock-quotes/"
+            target="_blank"
+            title="jQuery Stock Quotes plugin for showing stock symbols with quote information">View project</a>
         </div>
       </div>
       <div class="item">
@@ -55,6 +76,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/tags/react.jpg" alt="react-native-device-battery" />
           <h3>react-native-device-battery</h3>
           <p>An npm module for React Native to monitor battery state changes</p>
+          <a href="https://github.com/robinpowered/react-native-device-battery"
+            target="_blank"
+            title="React Native device battery module">View project</a>
         </div>
       </div>
       <div class="item">
@@ -62,6 +86,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/react-native-redux-todo-list.png" alt="React Native + Redux Todo List" />
           <h3>React Native + Redux Todo List</h3>
           <p>A basic todo list built with React Native and Redux predictable state containers</p>
+          <a href="https://github.com/ajwhite/ReactNative-Redux-Todo-List"
+            target="_blank"
+            title="React Native + Redux Todo List">View project</a>
         </div>
       </div>
       <div class="item">
@@ -69,6 +96,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/hearthstone-tracker.png" alt="React + Electron Hearthstone Tracker" />
           <h3>Hearthstone Card Tracker w/ Electron + React</h3>
           <p>A Hearthstone card tracker with Electron and React</p>
+          <a href="https://github.com/ajwhite/HearthstoneCardTracker"
+            target="_blank"
+            title="Hearthstone Card Tracker with Node, Electron, and React">View project</a>
         </div>
       </div>
       <div class="item">
@@ -76,6 +106,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/translation.png" alt="example" />
           <h3>angular-translate-once</h3>
           <p>An Angular component to optimize angular-translate to allow for one-time bindings</p>
+          <a href="https://atticuswhite.com/blog/angularjs-translate-once-angular-translate-one-time-binding/"
+            target="_blank"
+            title="AngularJS translate extenstion for one-time bindings">View project</a>
         </div>
       </div>
       <div class="item">
@@ -83,6 +116,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/jekyll-environment-variables.png" alt="Jekyll environment variables" />
           <h3>jekyll-environment-variables</h3>
           <p>Access your environt variables in your liquid templates for your Jekyll site</p>
+          <a href="https://github.com/ajwhite/jekyll-environment-variables"
+            target="_blank"
+            title="Jekyll plugin for environment variables">View project</a>
         </div>
       </div>
       <div class="item">
@@ -90,6 +126,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/bernie.png" alt="example" />
           <h3>Sites for Bernie</h3>
           <p>A WordPress Multisite system allowing for Bernie Sanders supporters to create their own organization websites</p>
+          <a href="http://forberniesanders.com/"
+            target="_blank"
+            title="SitesForBernie">View project</a>
         </div>
       </div>
       <div class="item">
@@ -97,6 +136,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/butler.png" alt="example" />
           <h3>Butler</h3>
           <p>A Slack bot for organizaing Coders for Sanders teams</p>
+          <a href="https://github.com/SandersForPresident/butler"
+            target="_blank"
+            title="SitesForBernie Slack bot">View project</a>
         </div>
       </div>
       <div class="item">
@@ -104,6 +146,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/tags/react.jpg" alt="react-native-device-battery" />
           <h3>react-native-android-shared-preference</h3>
           <p>An npm module for React Native to access Android's native SharedPreferences</p>
+          <a href="https://github.com/robinpowered/react-native-android-shared-preferences"
+            target="_blank"
+            title="React Native Android SharedPreferences">View project</a>
         </div>
       </div>
       <div class="item">
@@ -111,6 +156,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/street-view-traveler.png" alt="example" />
           <h3>Street View Traveler</h3>
           <p>Select two locations and travel between them in Google Street View</p>
+          <a href="https://github.com/ajwhite/Google-Street-Viewer"
+            target="_blank"
+            title="Google Street Viewer lab">View project</a>
         </div>
       </div>
       <div class="item">
@@ -118,6 +166,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/word-search.png" alt="example" />
           <h3>Word Search</h3>
           <p>A simple game of word search</p>
+          <a href="https://github.com/ajwhite/Word-Search"
+            target="_blank"
+            title="Word Search lab">View project</a>
         </div>
       </div>
       <div class="item">
@@ -125,6 +176,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/twitter-digits.png" alt="example" />
           <h3>angular-digits</h3>
           <p>An AngularJS component for Twitter's Fabric Digits</p>
+          <a href="https://atticuswhite.com/blog/twitter-digits-angularjs/"
+            target="_blank"
+            title="Twitter Digits for AngularJS">View project</a>
         </div>
       </div>
       <div class="item">
@@ -132,6 +186,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/github-notifier.png" alt="example" />
           <h3>Github Notifier</h3>
           <p>A chrome extension for receiving Github notifications</p>
+          <a href="https://github.com/ajwhite/chrome-github-notifier"
+            target="_blank"
+            title="Github Notification project">View project</a>
         </div>
       </div>
       <div class="item">
@@ -139,6 +196,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/popper.png" alt="example" />
           <h3>Popper</h3>
           <p>A jQuery plugin for creating flyout buttons</p>
+          <a href="https://github.com/ajwhite/Popper"
+            target="_blank"
+            title="jQuery social link popout plugin">View project</a>
         </div>
       </div>
       <div class="item">
@@ -146,6 +206,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/earthquakes.png" alt="example" />
           <h3>Live Earthquake Visualization</h3>
           <p>See where earthquakes have occurred throughout the world</p>
+          <a href="https://github.com/ajwhite/Earthquake"
+            target="_blank"
+            title="Live earthquake visualization with D3js and Firebase">View project</a>
         </div>
       </div>
       <div class="item">
@@ -153,6 +216,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/snake.png" alt="example" />
           <h3>Snake</h3>
           <p>A simple game of snake</p>
+          <a href="https://github.com/ajwhite/Snake"
+            target="_blank"
+            title="Javascript Snake game lab">View project</a>
         </div>
       </div>
       <div class="item">
@@ -160,6 +226,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/react-native-fifteen-puzzle.png" alt="example" />
           <h3>React Native Fifteen Puzzle</h3>
           <p>Exploring React Native with a Fifteen Puzzle</p>
+          <a href="https://github.com/ajwhite/react-native-fifteen-puzzle"
+            target="_blank"
+            title="React Native fifteen puzzle lab">View project</a>
         </div>
       </div>
       <div class="item">
@@ -167,6 +236,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/spotify.png" alt="example" />
           <h3>Spotify Event Finder</h3>
           <p>Finds upcoming concerts you would be interested in based on your music trends</p>
+          <a href="https://github.com/ajwhite/Spotify-Event-Finder"
+            target="_blank"
+            title="Spotify event finder lab">View project</a>
         </div>
       </div>
       <div class="item">
@@ -174,6 +246,9 @@
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/craigslist.png" alt="example" />
           <h3>Craigslist Job Searcher</h3>
           <p>Finds web contract listings around the country listed on Craigslist</p>
+          <a href="https://github.com/ajwhite/Craigslist-Scraper"
+            target="_blank"
+            title="Craigslist job searcher lab">View project</a>
         </div>
       </div>
     </div>
