--- a/src/_includes/home/work.html
+++ b/src/_includes/home/work.html
@@ -10,7 +10,7 @@
         <a href="https://robinpowered.com/features/room-display" target="_blank">View Project</a>
       </div>
       <div class="preview">
-        <img src="/dist/images/projects/robin/rooms.jpg" alt="Robin Rooms tablet" />
+        <img src="/dist/images/projects/robin/rooms.png" alt="Robin Rooms tablet" />
       </div>
     </div>
     <div class="portfolio-row">
