--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -36,6 +36,7 @@
   </div>
 </footer>
 
+<script>window.site_api_url = "{{ site.api_url }}";</script>
 <script type="text/javascript" src="/dist/vendor.js"></script>
 <script type="text/javascript" src="/dist/site.js"></script>
 <script async
