slackify open source project

--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -33,6 +33,16 @@
       </div>
       <div class="item">
         <div class="preview">
+          <img src="/dist/images/blank.png" data-original="/dist/images/labs/slackify.png" alt="Slackify" />
+          <h3>Slackify</h3>
+          <p>Upload files and stdin pipes to Slack from your CLI</p>
+          <a href="https://github.com/ajwhite/slackify"
+            target="_blank"
+            title="Slackify - Upload files and stdin pipes to Slack from your CLI">View Project</a>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
           <img src="/dist/images/blank.png" data-original="/dist/images/labs/fluid-labels.png" alt="example" />
           <h3>Fluid labels</h3>
           <p>Placeholder text that slides in as an overlay when the user beings typing</p>
