--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -38,6 +38,11 @@
     > *:not(.highlight) {
       .container;
     }
+
+    h1, h2, h3, h4, h5 {
+      margin-top: 30px;
+    }
+
     iframe {
       display: block;
     }
