--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -35,13 +35,24 @@
 
   .post-content {
     padding: 40px 0;
-    line-height: 26px;
     > *:not(.highlight) {
       .container;
     }
 
-    h1, h2, h3, h4, h5 {
+    h1 {
+      margin-top: 50px;
+    }
+
+    h2 {
+      font-size: 28px;
+    }
+
+    h2, h3, h4, h5 {
       margin-top: 30px;
+    }
+
+    p, ul, ol {
+      line-height: 26px;
     }
 
     iframe {
@@ -71,6 +82,14 @@
       li {
         margin-left: 20px;
       }
+    }
+
+    blockquote {
+      padding: 40px;
+      font-size: 38px;
+      font-style: italic;
+      font-weight: 100;
+      text-align: center;
     }
 
     .highlight {
