--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -4,8 +4,10 @@
 @import '../../../bower_components/bootstrap/less/responsive-utilities';
 @import '../../../bower_components/bootstrap/less/normalize';
 @import '../../../bower_components/font-awesome/less/variables.less';
+@import '../../../bower_components/octicons/octicons/octicons.less';
 // override fonts path
 @fa-font-path: './fonts';
+@octicons-font-path: './fonts';
 @import '../../../bower_components/font-awesome/less/mixins.less';
 @import '../../../bower_components/font-awesome/less/path.less';
 @import '../../../bower_components/font-awesome/less/core.less';
