--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -265,6 +265,69 @@ body.page-index {
   }
 }
 
+.home section.intro {
+  position: relative;;
+  .row {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .skills {
+    h1 {
+      text-align: center;
+    }
+    .skill {
+      .make-md-column(3);
+      /*width: 220px; */
+      height: 330px;
+      > div {
+        background-color: #fff;
+        border: 1px solid #dedede;
+        border-radius: 4px;
+        padding: 20px 10px 10px 10px;
+        text-align: center;
+        height: 100%;
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 24px;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      h2 { margin: 20px 0; }
+
+    }
+  }
+}
+
+.skill {
+  .icon {
+    width: 130px;
+    height: 130px;
+    background-color:blue;
+    border-radius: 50%;
+    padding: 15px 10px;
+    margin: auto;
+    position: relative;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    img {
+      position: relative;
+      display: block;
+      margin: auto;
+      width: 80px;
+      top:50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+    }
+  }
+}
+
 .home section.skills {
   position: relative;
   .row {
@@ -305,29 +368,6 @@ body.page-index {
 
       &:last-child {
         margin-right: 0;
-      }
-
-      .icon {
-        width: 130px;
-        height: 130px;
-        background-color:blue;
-        border-radius: 50%;
-        padding: 15px 10px;
-        margin: auto;
-        position: relative;
-        -webkit-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-        -ms-transform-style: preserve-3d;
-        img {
-          position: relative;
-          display: block;
-          margin: auto;
-          width: 80px;
-          top:50%;
-          -webkit-transform: translateY(-50%);
-          -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-        }
       }
 
       h2 { margin: 20px 0; }
