--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -20,6 +20,7 @@
 @import '../../../bower_components/font-awesome/less/stacked.less';
 @import '../../../bower_components/font-awesome/less/icons.less';
 @import '../../../bower_components/fluid-labels/src/fluid-labels.less';
+@import (inline) '../../../bower_components/owl.carousel/dist/assets/owl.carousel.css';
 @import './variables';
 @import './animations';
 @import './site';
