--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -3,6 +3,7 @@ body {
   font-size: 16px;
   color: rgb(106, 106, 106);
   background-color: #FAFAFA;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
