react added to intro

--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -6,9 +6,19 @@
 <div class="skills owl-carousel">
   <div class="container group">
 
-    <h1>Web Application</h1>
+    <h1>Web Applications</h1>
 
     <div class="cards">
+
+      <div class="skill">
+        <div>
+          <div class="icon" style="background-color:#000;">
+            <img src="/dist/images/icons/react.png" alt="React" />
+          </div>
+          <h2>React</h2>
+          <p>Applications powered by stateless components and Redux state machines.</p>
+        </div>
+      </div>
       <div class="skill">
         <div>
           <div class="icon" style="background-color:#9c120f;">
@@ -27,7 +37,6 @@
           <p>NPM &amp; NodeJS development for applications and custom tasks.</p>
         </div>
       </div>
-
       <div class="skill">
         <div>
           <div class="icon" style="background-color:#5e73b5;">
@@ -35,16 +44,6 @@
           </div>
           <h2>PHP</h2>
           <p>Frameworks, such as Laravel, to empower a capable MVC architecture.</p>
-        </div>
-      </div>
-
-      <div class="skill">
-        <div>
-          <div class="icon" style="background-color:#e04f14;">
-            <img src="/dist/images/icons/html5.svg" height="84" alt="HTML5" />
-          </div>
-          <h2>HTML5/CSS3/JS</h2>
-          <p>Modern UI/UX, with a deep understanding of SASS and DOM manipulation and data binding.</p>
         </div>
       </div>
     </div>
@@ -55,16 +54,16 @@
     <h1>Mobile Applications</h1>
 
     <div class="cards">
-
       <div class="skill">
         <div>
-          <div class="icon" style="background-color:#000000;">
-            <img src="/dist/images/icons/ios.png" alt="iOS" />
+          <div class="icon" style="background-color:#000;">
+            <img src="/dist/images/icons/react.png" alt="React Native" />
           </div>
-          <h2>iOS</h2>
-          <p>iPhone and iPad development, from games to data-rich applications.</p>
+          <h2>React Native</h2>
+          <p>Rapid and flexible development with React Native.</p>
         </div>
       </div>
+
       <div class="skill">
         <div>
           <div class="icon" style="background-color:#489ff2;">
@@ -83,6 +82,15 @@
           <p>Android development, from games to data-rich applications.</p>
         </div>
       </div>
+      <div class="skill">
+        <div>
+          <div class="icon" style="background-color:#000000;">
+            <img src="/dist/images/icons/ios.png" alt="iOS" />
+          </div>
+          <h2>iOS</h2>
+          <p>iPhone and iPad development, from games to data-rich applications.</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -91,6 +99,16 @@
     <h1>Websites &amp; eCommerce</h1>
 
     <div class="cards">
+      <div class="skill">
+        <div>
+          <div class="icon" style="background-color:#e04f14;">
+            <img src="/dist/images/icons/html5.svg" height="84" alt="HTML5" />
+          </div>
+          <h2>HTML5/CSS3/JS</h2>
+          <p>Modern UI/UX, with a deep understanding of SASS and DOM manipulation and data binding.</p>
+        </div>
+      </div>
+
       <div class="skill">
         <div>
           <div class="icon" style="background-color:#146ec0;">
@@ -118,16 +136,6 @@
           </div>
           <h2>Magento</h2>
           <p>For large stores or store owners with specific business needs.</p>
-        </div>
-      </div>
-
-      <div class="skill">
-        <div>
-          <div class="icon" style="background-color:#000000;">
-            <img src="/dist/images/icons/ios.png" alt="iOS" />
-          </div>
-          <h2>jekyll</h2>
-          <p>Static websites for quick and simple websites.</p>
         </div>
       </div>
     </div>
