open source activity section

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -271,10 +271,14 @@ body.page-index {
     margin-top: 20px;
     margin-bottom: 20px;
   }
+  h1, h2 {
+    text-align: center;
+  }
+  h2 .octicon {
+    font-size: 28px;
+  }
+
   .skills {
-    h1 {
-      text-align: center;
-    }
     .skill {
       .make-md-column(3);
       /*width: 220px; */
