--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 style="text-align: center;">I work on a range of different things</h2>
+  <h2>I work on a range of different things</h2>
 </div>
 
 
@@ -143,5 +143,25 @@
 </div>
 
 <div class="container">
-  <br/><br/>
+  <h1>Open Source Activity</h1>
+  <div class="row">
+    <div class="col-md-4">
+      <h2>
+        <span class="octicon octicon-repo"></span>
+        Latest Projects
+      </h2>
+    </div>
+    <div class="col-md-4">
+      <h2>
+        <span class="octicon octicon-rss"></span>
+        Last Github Activity
+      </h2>
+    </div>
+    <div class="col-md-4">
+      <h2>
+        <span class="octicon octicon-star"></span>
+        Recent Favorites on Github
+      </h2>
+    </div>
+  </div>
 </div>
