github activity component styles and layouts

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -305,6 +305,33 @@ body.page-index {
 
     }
   }
+
+  .activity-column {
+    .make-md-column(6);
+    h2 {
+      text-align: left;
+      .octicon {
+        width: 24px;
+        text-align: center;
+      }
+    }
+    .activity {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      font-size: 18px;
+      margin-bottom: 10px;
+      font-weight: 300;
+      .octicon {
+        font-size: 22px;
+        width: 24px;
+        text-align: center;
+      }
+      .content {
+        margin-left: 10px;
+      }
+    }
+  }
 }
 
 .skill {
