--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -142,26 +142,22 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container activity">
   <h1>Open Source Activity</h1>
   <div class="row">
-    <div class="col-md-4">
+    <div class="activity-column">
       <h2>
         <span class="octicon octicon-repo"></span>
         Latest Projects
       </h2>
+      <div id="github-projects" class="activity-feed"></div>
     </div>
-    <div class="col-md-4">
+    <div class="activity-column">
       <h2>
         <span class="octicon octicon-rss"></span>
         Last Github Activity
       </h2>
-    </div>
-    <div class="col-md-4">
-      <h2>
-        <span class="octicon octicon-star"></span>
-        Recent Favorites on Github
-      </h2>
+      <div id="github-activity" class="activity-feed"></div>
     </div>
   </div>
 </div>
