blurbs and excerpts

--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -1,12 +1,11 @@
-<div class="container">
-  <h2>I work on a range of different things</h2>
-</div>
-
-
 <div class="skills owl-carousel">
   <div class="container group">
 
     <h1>Web Applications</h1>
+
+    <p>
+      Since 2009 I have been developing web applications. I've discovered my strengths, weaknesses, what I like and what I don't like. Every few months I aim to learn something new. It's been an amazing journey.
+    </p>
 
     <div class="cards">
 
@@ -53,6 +52,10 @@
   <div class="container group">
     <h1>Mobile Applications</h1>
 
+    <p>
+      Atwoods Law states that if something can be written in Javascript, it will be written in Javascript. Tools like React Native and Redux has let me transition from web devleopment into mobile development. Over the years I have worked natively between Android and iOS, but my strengths can finally surface with new tools the community has introduced.
+    </p>
+
     <div class="cards">
       <div class="skill">
         <div>
@@ -97,6 +100,10 @@
 
   <div class="container group">
     <h1>Websites &amp; eCommerce</h1>
+
+    <p>
+      Since 2006 I have been working with websites. It started with the run-of-the-mill HTML, CSS, and Javascript to produce the basics. Over the years this has grown into devleping custom web solutions for companies, products, and brands that need a space on the internet.
+    </p>
 
     <div class="cards">
       <div class="skill">
@@ -144,6 +151,10 @@
 
 <div class="container activity">
   <h1>Open Source Activity</h1>
+  <p>
+    We wouldn't see the innovation today if it wasn't for Open Source. I contribute to the community both within my work
+    at <a href="https://robinpowered.com">Robin Powered</a> and in my personal time as a hobby.
+  </p>
   <div class="row">
     <div class="activity-column">
       <h2>
