link and styles

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -280,6 +280,10 @@ body.page-index {
   p {
     text-align: center;
   }
+  .github-link {
+    text-align: center;
+    margin: 20px 0 40px;
+  }
 
   .skills {
     .skill {
