--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -166,9 +166,15 @@
     <div class="activity-column">
       <h2>
         <span class="octicon octicon-rss"></span>
-        Last Github Activity
+        Recent Activity
       </h2>
       <div id="github-activity" class="activity-feed"></div>
     </div>
+  </div>
+
+  <div class="github-link">
+    <a href="https://github.com/ajwhite"
+      target="_blank"
+      title="Projects by Atticus White on GitHub">github.com/ajwhite</a>
   </div>
 </div>
