--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -280,10 +280,6 @@ body.page-index {
   p {
     text-align: center;
   }
-  .github-link {
-    text-align: center;
-    margin: 20px 0 40px;
-  }
 
   .skills {
     .skill {
@@ -310,6 +306,26 @@ body.page-index {
 
       h2 { margin: 20px 0; }
 
+    }
+  }
+
+  .github-info {
+    text-align: center;
+    margin-bottom: 30px;
+    .bio {
+      font-size: 24px;
+      margin-bottom: 10px;
+      .octicon {
+        font-size: 24px;
+      }
+    }
+    .stats {
+      > span {
+        margin: 0 5px;
+      }
+      span {
+        font-size: 20px;
+      }
     }
   }
 
