--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -151,6 +151,19 @@
 
 <div class="container activity">
   <h1>Open Source Activity</h1>
+  <div class="github-info">
+    <div class="bio">
+      <span class="octicon octicon-mark-github"></span>
+      <a href="https://github.com/ajwhite"
+        target="_blank"
+        title="Projects by Atticus White on GitHub">@ajwhite</a>
+    </div>
+    <div class="stats">
+      <span class="repos">110 <span class="octicon octicon-repo"></span></span>
+      <span class="follows">70 <span class="octicon octicon-organization"></span></span>
+      <span class="stars">387 <span class="octicon octicon-star"></span></span>
+    </div>
+  </div>
   <p>
     We wouldn't see the innovation today if it wasn't for Open Source. I contribute to the community both within my work
     at <a href="https://robinpowered.com">Robin Powered</a> and in my personal time as a hobby.
@@ -170,11 +183,5 @@
       </h2>
       <div id="github-activity" class="activity-feed"></div>
     </div>
-  </div>
-
-  <div class="github-link">
-    <a href="https://github.com/ajwhite"
-      target="_blank"
-      title="Projects by Atticus White on GitHub">github.com/ajwhite</a>
   </div>
 </div>
