--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -53,7 +53,7 @@
     <h1>Mobile Applications</h1>
 
     <p>
-      Atwoods Law states that if something can be written in Javascript, it will be written in Javascript. Tools like React Native and Redux has let me transition from web devleopment into mobile development. Over the years I have worked natively between Android and iOS, but my strengths can finally surface with new tools the community has introduced.
+      Atwoods Law states that if something can be written in Javascript, it will be written in Javascript. Tools like React Native and Redux have let me transition from web devleopment into mobile development. Over the years I have worked natively between Android and iOS, but my strengths can finally surface with new tools the community has introduced.
     </p>
 
     <div class="cards">
