--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -284,6 +284,7 @@ body.page-index {
   .skills {
     .skill {
       .make-md-column(3);
+      margin-bottom: 10px;
       /*width: 220px; */
       height: 330px;
       > div {
@@ -309,6 +310,21 @@ body.page-index {
     }
   }
 
+  .owl-dots {
+    margin-top: 10px;
+    text-align: center;
+    .owl-dot {
+      display: inline-block;
+      width: 14px;
+      height: 14px;
+      border-radius: 7px;
+      margin: 0 5px;
+      background-color: #000;
+      &.active {
+        background-color: #23abf1;
+      }
+    }
+  }
   .github-info {
     text-align: center;
     margin-bottom: 30px;
