--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -4,7 +4,7 @@
     <h1>Web Applications</h1>
 
     <p>
-      Since 2009 I have been developing web applications. I've discovered my strengths, weaknesses, what I like and what I don't like. Every few months I aim to learn something new. It's been an amazing journey.
+      I have been developing web applications since 2009. I've discovered my strengths, weaknesses, what I like and what I don't like. Every few months I aim to learn something new. It's been an amazing journey.
     </p>
 
     <div class="cards">
