--- a/src/_includes/home/work.html
+++ b/src/_includes/home/work.html
@@ -29,7 +29,7 @@
     <div class="portfolio-row alt">
       <div class="info">
         <h1>TweetDrive</h1>
-        <h2>A game playe during the 2011 NFL Playoffs on NBCSports</h2>
+        <h2>A game played during the 2011 NFL Playoffs on NBCSports</h2>
         <p>
           TweetDrive was a trivia game hosted on NBCSports.com during the 2011 NFL playoffs. I built the web application that allows users to engage in the game through either twitter or the web application itself. A series of questions are posted every quarter of the game and users can response with their predictions - "How many yards will Brady throw in the first quarter". The speed in which a user responds along with the accuracy of their prediction awards them pointage in terms of yards (out of 100). Every 100 yards is a touchdown. The players with the highest touchdowns (total yards) wins.
         </p>
