carousel nav colors

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -319,7 +319,7 @@ body.page-index {
       height: 14px;
       border-radius: 7px;
       margin: 0 5px;
-      background-color: #000;
+      background-color: rgba(0,0,0,0.24);
       &.active {
         background-color: #23abf1;
       }
