dynamic github stats

--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -159,9 +159,18 @@
         title="Projects by Atticus White on GitHub">@ajwhite</a>
     </div>
     <div class="stats">
-      <span class="repos">110 <span class="octicon octicon-repo"></span></span>
-      <span class="follows">70 <span class="octicon octicon-organization"></span></span>
-      <span class="stars">387 <span class="octicon octicon-star"></span></span>
+      <span class="repos">
+        <span id="github-repo-count" class="count">110</span>
+        <span class="octicon octicon-repo"></span>
+      </span>
+      <span class="follows">
+        <span id="github-repo-count" class="count">70</span>
+        <span class="octicon octicon-organization"></span>
+      </span>
+      <span class="stars">
+        <span id="github-star-count" class="count">400</span>
+        <span class="octicon octicon-star"></span>
+      </span>
     </div>
   </div>
   <p>
