--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -168,7 +168,7 @@
         <span class="octicon octicon-organization"></span>
       </span>
       <span class="stars">
-        <span id="github-star-count" class="count">400</span>
+        <span id="github-star-count" class="count">411</span>
         <span class="octicon octicon-star"></span>
       </span>
     </div>
@@ -177,20 +177,30 @@
     We wouldn't see the innovation today if it wasn't for Open Source. I contribute to the community both within my work
     at <a href="https://robinpowered.com">Robin Powered</a> and in my personal time as a hobby.
   </p>
-  <div class="row">
+  <div class="activity-row">
     <div class="activity-column">
       <h2>
         <span class="octicon octicon-repo"></span>
         Latest Projects
       </h2>
-      <div id="github-projects" class="activity-feed"></div>
+      <div id="github-projects" class="activity-feed">
+        There was a problem loading recent projects.
+        You can find these on my <a href="https://github.com/ajwhite"
+          target="_blank"
+          title="Projects by Atticus White on GitHub">Github profile</a>.
+      </div>
     </div>
     <div class="activity-column">
       <h2>
         <span class="octicon octicon-rss"></span>
         Recent Activity
       </h2>
-      <div id="github-activity" class="activity-feed"></div>
+      <div id="github-activity" class="activity-feed">
+        There was a problem loading recent activity.
+        You can find this on my <a href="https://github.com/ajwhite"
+          target="_blank"
+          title="Projects by Atticus White on GitHub">Github profile</a>.
+      </div>
     </div>
   </div>
 </div>
