--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -281,8 +281,13 @@ body.page-index {
     text-align: center;
   }
 
+  .container.activity {
+    margin-top: 20px;
+  }
+
   .skills {
     .skill {
+      .make-sm-column(6);
       .make-md-column(3);
       margin-bottom: 10px;
       /*width: 220px; */
@@ -368,6 +373,11 @@ body.page-index {
       font-size: 18px;
       margin-bottom: 10px;
       font-weight: 300;
+      @media @tablet-max {
+        &:nth-of-type(n + 5) {
+          display: none;
+        }
+      }
       .octicon {
         font-size: 22px;
       }
