--- a/src/_includes/home/intro.html
+++ b/src/_includes/home/intro.html
@@ -53,7 +53,7 @@
     <h1>Mobile Applications</h1>
 
     <p>
-      Atwoods Law states that if something can be written in Javascript, it will be written in Javascript. Tools like React Native and Redux have let me transition from web devleopment into mobile development. Over the years I have worked natively between Android and iOS, but my strengths can finally surface with new tools the community has introduced.
+      <a href="http://blog.codinghorror.com/the-principle-of-least-power/" target="_blank" title="Atwood's Law - The Principle of Least Power">Atwood's Law</a> states that if something can be written in Javascript, it will be written in JavaScript. Tools like <a href="https://facebook.github.io/react-native/" target="_blank" title="React Native - A framework for building native apps using React">React Native</a> and <a href="http://redux.js.org/" target="_blank" title="Redux - A predictable sate container for JavaScript apps">Redux</a> have allowed me to transition from web devleopment into mobile development while carrying over familiar methodologies. Over the years I have worked natively between Android and iOS, but my strengths can better surface with new tools the community has introduced.
     </p>
 
     <div class="cards">
