blog author markup and styles

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -24,6 +24,45 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+  <div class="container author">
+
+    <div class="portrait">
+      <div class="clip">
+        <img src="/dist/images/me.jpeg" alt="Atticus White" />
+      </div>
+    </div>
+
+    <div class="description">
+      <div class="about">
+        <h3>Atticus White</h3>
+        <p>
+          Atticus spends his days in React, Angular, and NodeJS and loves discovering new ways to solve problems.
+        </p>
+        <div class="meta">
+          <span class="item">
+            <i class="fa fa-map-marker"></i>
+            Boston, MA
+          </span>
+          <span class="item">
+            <i class="fa fa-link"></i>
+            <a href="https://twitter.com/atticoos" title="Atticus White on Twitter">https://twitter.com/atticoos</a>
+          </span>
+        </div>
+      </div>
+      <div class="share">
+        <h3>Share</h3>
+        <a href="#" class="twitter social-share">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="#" class="facebook social-share">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a href="#" class="google social-share">
+          <i class="fa fa-google-plus"></i>
+        </a>
+      </div>
+    </div>
+  </div>
   <div class="container">
     {% include posts/comments.html %}
   </div>
