--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -140,3 +140,69 @@
     }
   }
 }
+
+.blog .author {
+  margin-bottom: 40px;
+  .portrait {
+    position: relative;
+    &:before {
+      content: ' ';
+      position: absolute;
+      width: 100%;
+      top: 50px;
+      height: 1px;
+      background-color: rgba(128, 128, 128, 0.4);
+    }
+    .clip {
+      position: relative;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      overflow: hidden;
+      padding: 6px;
+      margin: auto;
+      border: 1px solid rgba(128, 128, 128, 0.4);
+      background-color: @backgroundColor;
+    }
+    img {
+      display: block;
+      width: 100%;
+      border-radius: 50%;
+    }
+  }
+  .description {
+    .make-row();
+    .about {
+      .make-sm-column(9);
+      .meta {
+        font-style: italic;
+        color: lighten(@textColor, 20%);
+        .item {
+          margin-right: 20px;
+          &:last {
+            margin-right: 0;
+          }
+        }
+        a {
+          color: lighten(@textColor, 20%);
+        }
+      }
+    }
+    .share {
+      .make-sm-column(3);
+      .social-share {
+        color: @textColor;
+        margin-right: 10px;
+        i {
+          font-size: 22px;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+    h3 {
+      font-weight: normal;
+    }
+  }
+}
